test_regress/t/t_array_list_bad.out
%Error: t/t_array_list_bad.v:38:25: Assignment pattern missed initializing elements: 'logic' 't3'
                                  : ... In instance t
   38 |             test_out <= '{'0, '0};  
      |                         ^~
%Warning-WIDTH: t/t_array_list_bad.v:38:22: Operator ASSIGNDLY expects 3 bits on the Assign RHS, but Assign RHS's CONCAT generates 2 bits.
                                          : ... In instance t
   38 |             test_out <= '{'0, '0};  
      |                      ^~
                ... For warning description see https://verilator.org/warn/WIDTH?v=latest
                ... Use "/* verilator lint_off WIDTH */" and lint_on around source to disable this message.
%Error: Exiting due to
